[gd_scene load_steps=17 format=2]

[ext_resource path="res://LetterController.gd" type="Script" id=1]
[ext_resource path="res://assets/test_sprites/word_rock.png" type="Texture" id=2]
[ext_resource path="res://assets/test_sprites/gas_cloud/gas_cloud_anim4.png" type="Texture" id=3]
[ext_resource path="res://assets/test_sprites/gas_cloud/gas_cloud_anim10.png" type="Texture" id=4]
[ext_resource path="res://assets/test_sprites/gas_cloud/gas_cloud_anim6.png" type="Texture" id=5]
[ext_resource path="res://Area2D.gd" type="Script" id=6]
[ext_resource path="res://assets/test_sprites/gas_cloud/gas_cloud_anim7.png" type="Texture" id=7]
[ext_resource path="res://assets/atlases/lower_case_letters.png" type="Texture" id=8]
[ext_resource path="res://assets/test_sprites/gas_cloud/gas_cloud_anim1.png" type="Texture" id=9]
[ext_resource path="res://assets/test_sprites/gas_cloud/gas_cloud_anim2.png" type="Texture" id=10]
[ext_resource path="res://assets/test_sprites/gas_cloud/gas_cloud_anim8.png" type="Texture" id=11]
[ext_resource path="res://assets/test_sprites/gas_cloud/gas_cloud_anim5.png" type="Texture" id=12]
[ext_resource path="res://assets/test_sprites/gas_cloud/gas_cloud_anim9.png" type="Texture" id=13]
[ext_resource path="res://assets/test_sprites/gas_cloud/gas_cloud_anim3.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 3 ), ExtResource( 12 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46, 17.5 )

[node name="WordController" type="Node2D"]
scale = Vector2( 0.7, 0.7 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.768627 )
self_modulate = Color( 1, 0.690196, 1, 0.772549 )
frames = SubResource( 2 )
frame = 4
speed_scale = 0.5
playing = true

[node name="Cloud" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -5.96046e-08 )
texture = ExtResource( 2 )

[node name="OddLetterPos" type="Node2D" parent="."]

[node name="Letter1" type="Position2D" parent="OddLetterPos"]
position = Vector2( -40, 0 )

[node name="Letter2" type="Position2D" parent="OddLetterPos"]
position = Vector2( -20, 0 )

[node name="Letter3" type="Position2D" parent="OddLetterPos"]

[node name="Letter4" type="Position2D" parent="OddLetterPos"]
position = Vector2( 20, 0 )

[node name="Letter5" type="Position2D" parent="OddLetterPos"]
position = Vector2( 40, 0 )

[node name="EvenLetterPos" type="Node2D" parent="."]

[node name="Letter1" type="Position2D" parent="EvenLetterPos"]
position = Vector2( -27, 0 )

[node name="Letter2" type="Position2D" parent="EvenLetterPos"]
position = Vector2( -9, 0 )

[node name="Letter3" type="Position2D" parent="EvenLetterPos"]
position = Vector2( 9, 0 )

[node name="Letter4" type="Position2D" parent="EvenLetterPos"]
position = Vector2( 27, 0 )

[node name="LetterInstance" type="Node2D" parent="."]
scale = Vector2( 0.6, 0.6 )

[node name="Letter_1" type="Sprite" parent="LetterInstance"]
visible = false
position = Vector2( 16, 22 )
texture = ExtResource( 8 )
region_enabled = true

[node name="Letter_2" type="Sprite" parent="LetterInstance"]
visible = false
position = Vector2( -17, 21 )
texture = ExtResource( 8 )
region_enabled = true

[node name="Letter_3" type="Sprite" parent="LetterInstance"]
visible = false
position = Vector2( 35, 22 )
texture = ExtResource( 8 )
region_enabled = true

[node name="Letter_4" type="Sprite" parent="LetterInstance"]
visible = false
position = Vector2( 0, 22 )
texture = ExtResource( 8 )
region_enabled = true

[node name="Letter_5" type="Sprite" parent="LetterInstance"]
visible = false
position = Vector2( 10, 75 )
texture = ExtResource( 8 )
region_enabled = true

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, -0.5 )
shape = SubResource( 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
